fix jpackage task compatibility with gradle configuration cache; add test case